--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -53,8 +53,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACTION_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_ACTION_SECRET_ACCESS_KEY }}
-          application_name: breifing-dev # Beanstalk 에서 설정한 이름으로
-          environment_name: Breifing-dev-env # Beanstalk 에서 설정한 이름으로
+          application_name: niornear-develop # Beanstalk 에서 설정한 이름으로
+          environment_name: Niornear-develop-env-1 # Beanstalk 에서 설정한 이름으로
           version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
           region: ap-northeast-1
           deployment_package: deploy/deploy.zip
